--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -1,5 +1,5 @@
 .header {
-    background: #000;
+    background: white;
 }
 
 .header__inner {
@@ -15,10 +15,10 @@
 }
 
 .header__logo {
-    color: #fff;
+    color: black;
     text-decoration: none;
     font-weight: bold;
-    font-size: 24px;
+    font-size: 33px;
 }
 
 .header-utilities nav {
