--- a/src/public/css/register.css
+++ b/src/public/css/register.css
@@ -1,3 +1,8 @@
+.register__content {
+    background-color: rgb(244, 242, 242);
+    padding-bottom: 80px;
+}
+
 .register-form__content {
     margin: 0 auto;
     padding: 30px 15px;
@@ -7,6 +12,8 @@
 .register-form__heading {
     margin-bottom: 20px;
     text-align: center;
+    padding-top: 70px;
+    padding-bottom: 10px;
 }
 
 .form {
@@ -32,10 +39,9 @@
 .form__input--text input {
     padding: 10px;
     width: 100%;
-    height: 40px;
-    border: 1px solid #ddd;
-    border-radius: 3px;
-
+    height: 50px;
+    border: 2px solid #b7b5b5;
+    border-radius: 6px;
     appearance: none;
 }
 
@@ -45,16 +51,28 @@
 
 .form__button-submit {
     padding: 10px;
-    width: 30%;
+    width: 100%;
     height: 50px;
     border: none;
     border-radius: 3px;
-    background: #000;
+    background: rgb(52, 52, 217);
     color: #fff;
     cursor: pointer;
 }
 
 .login__link {
-    margin-top: 20px;
+    margin-top: 5px;
     text-align: center;
+    border: none;
+}
+
+p {
+    text-align: center;
+}
+
+.footer__inner {
+    text-align: center;
+    font-size: 14px;
+    font-weight: bold;
+    padding-top: 20px;
 }
