--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -29,17 +29,19 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    color: black;
 }
 
 .header-nav__link {
-    color: #fff;
+    color: black;
     text-decoration: none;
+
 }
 
 .header-nav__button {
     border: none;
     background: transparent;
-    color: #fff;
+    color: black;
     font-size: 16px;
     cursor: pointer;
 }
