--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -1,3 +1,7 @@
+h2 {
+    text-align: center;
+}
+
 .attendance__alert--success {
     padding: 10px 30px;
     border-color: #badbcc;
@@ -17,53 +21,41 @@
 }
 
 .attendance__panel {
-    margin: 0 auto;
-    width: 70%;
+    margin-left: 230px;
+    width: 30%;
+    display: flex;
+    /* justify-content: space-between; */
+    padding-bottom: 60px
 }
 
 .attendance__button {
-    width: 100%;
+    /* width: 450px; */
     text-align: center;
 }
 
 .attendance__button-submit {
-    padding: 5px;
-    width: 30%;
-    height: 50px;
+    margin-right: 50px;
+    width: 450px;
+    height: 230px;
     border: none;
     border-radius: 3px;
-    background: #000;
-    color: #fff;
+    background: white;
+    color: black;
     cursor: pointer;
+    font-size: 30px;
 }
 
 .attendance__content {
     margin: 0 auto;
     padding: 30px 15px;
-    max-width: 1230px;
+    max-width: 100%;
+    background-color: rgb(244, 242, 242);
+    padding-bottom: 0px;
 }
 
-.attendance-table {
-    margin: 30px auto;
-    width: 70%;
+.footer__inner {
     text-align: center;
-}
-
-.attendance-table__inner {
-    width: 100%;
-}
-
-.attendance-table__row {
-    border-bottom: 1px solid #ddd;
-}
-
-.attendance-table__header {
-    padding: 12px;
-    width: 20%;
+    font-size: 14px;
     font-weight: bold;
-}
-
-.attendance-table__item {
-    padding: 12px;
-    width: 20%;
+    padding-top: 10px;
 }
