attendanceテーブル作成

--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -53,6 +53,10 @@ h2 {
     padding-bottom: 0px;
 }
 
+.footer {
+    /* margin-top: 10px; */
+}
+
 .footer__inner {
     text-align: center;
     font-size: 14px;
