--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -1,5 +1,6 @@
 .header {
     background: white;
+    height: 80px;
 }
 
 .header__inner {
@@ -22,7 +23,7 @@
 }
 
 .header-utilities nav {
-    width: 18%;
+    width: 20%;
 }
 
 .header-nav {
