--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -47,10 +47,11 @@ h2 {
 
 .attendance__content {
     margin: 0 auto;
-    padding: 30px 15px;
+    padding: 30px 10px;
     max-width: 100%;
+    height: 100%;
     background-color: rgb(244, 242, 242);
-    padding-bottom: 0px;
+    margin-top: 10px;
 }
 
 .footer {
